# web_10

./: pyproject.toml
quotes/: authors.json  quotes.json  some_load.py  tags.json
quotes/quote_app/: admin.py  forms.py  models.py  urls.py  views.py
quotes/quote_app/migrations/: 0001_initial.py  0002_author_born_author_description.py  0003_alter_tag_name.py  0004_alter_author_born.py  0005_alter_quote_text.py
quotes/quote_app/templates/quote_app/: add_author.html  add_quote.html  add_tag.html  base.html  detail.html  index.html
quotes/quotes/: settings.py  urls.py
quotes/users/: forms.py  models.py  views.py
quotes/users/templates/users/: login.html  signup.html
